--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
 <div id="profile">
 <div id="profile-left">
 	<div id="profile-head">
-		<p><img src="<%= @user.image_url %>"></p>
-		<p><%= @user.first_name %> <%= @user.last_name %></p>
-		<p><%= @user.username %></p>
+		<img src="<%= @user.image_url %>">
+		<br>
+		<p>Name: <%= @user.first_name %> <%= @user.last_name %></p>
+		<br>
+		<p>Username: <%= @user.username %></p>
+		<br>
 		<% if current_user && current_user.id == @user.id %>
 			<%= link_to "Edit", edit_user_path(@user) %>
 		<% end %>
