--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row game-show-div">
 
   <div class="col-md-2 game-pic-div game-show-div">
     <img src="<%= @game.image_url %>">
