--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <header class="col-xs-12">
     <nav class="navbar-fixed-top">
-      <h1>Bored? Games!</h1>
+      <h1>Bored? GAMEZ!?</h1>
 
       <form action="/games/search" id="search-form" class="navbar-right">
         <input id="search" type="test" name="query" placeholder="search games">
