Fix user image size on search page

--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -18,6 +18,11 @@
   padding-right: 40px;
 }
 
+.table-search img {
+  height: 100px;
+  width: 100px;
+}
+
 #found-users {
   font-size: 50px;
   text-align: center;
