--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -48,6 +48,12 @@
   padding: 2px;
 }
 
+#profile-friends p {
+	text-align: center;
+	width: 90%;
+	padding: 2px;
+}
+
 #profile-friends ul {
 	font-size: 15px;
 }
