--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -1,10 +1,10 @@
 .add-game-form {
-  width: 80%;
+  width: 76%;
   margin: 0 auto;
 }
 
 .add-game-form input, .add-game-form textarea {
-  width: 80%;
+  width: 76%;
   margin-top: 10px;
   padding: 5px;
 }
@@ -33,8 +33,16 @@
   text-align: center;
 }
 .add-comment-form input[type=text]{
-  width: 80%;
+  width: 76%;
   margin: 10px auto;
   /*padding: 5px;*/
   height: 30px;
+}
+
+.errors {
+  width: 100%
+}
+
+.field_with_errors {
+  display: inline;
 }
